manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: simplebank
    component: api-database
spec:
  selector:
    app: simplebank
    component: api-database
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
