manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: simplebank
    component: api-database
spec:
  selector:
    app: simplebank
    component: api-database
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
