manifests/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: server

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: alertmanager
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
# spec:
#   type: NodePort
#   ports:
#   - name: web
#     port: 9093
#     protocol: TCP
#     targetPort: 9093
#   selector:
#     alertmanager: main
